Fixes problems with new design on mobile

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -38,7 +38,7 @@ a {
 }
 
 .title {
-	font-size: 36px;
+	font-size: 30px;
 }
 
 .link {
